--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-header></app-header>
+  <!-- <app-header></app-header> -->
   <router-outlet *ngIf="isOnline;else isOffline"></router-outlet>
   <ng-template #isOffline>
     <div>
@@ -7,4 +7,4 @@
     </div>
   </ng-template>
 </div>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
