--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,12 +1,42 @@
-<div fxLayout="row">
+<div fxLayout="row" class="bg">
   <div fxFlex="10" fxFlex.gt-sm="20"></div>
-  <div fxFlex="90" fxFlex.gt-sm="80">
-    <h1 class="header__title" i18n="@@topHeroes">Heroes most liked</h1>
-    <div id="heroes-list" *ngIf="heroes$ | async as heroes; else loading">
-      <ng-container *ngFor="let hero of heroes">
-        <app-hero-card [hero]="hero"></app-hero-card>
-      </ng-container>
+  <div fxFlex="90" fxFlex.gt-sm="80" class="full-center">
+    <div class="logo">
+      <svg xmlns="http://www.w3.org/2000/svg" width="193.949" height="198.142" viewBox="0 0 193.949 198.142">
+        <g id="Group_1095" data-name="Group 1095" transform="translate(-65.834 -208.555)">
+          <path id="Path_236" data-name="Path 236"
+            d="M651.947,248.61h0a15.245,15.245,0,0,1-15.2-15.2v-90.16a15.2,15.2,0,1,1,30.4,0v90.16a15.245,15.245,0,0,1-15.2,15.2m-110.6-15.2V118.088a15.2,15.2,0,1,0-30.4,0V233.409a15.2,15.2,0,1,0,30.4,0m83.871,0V180.99a15.2,15.2,0,0,0-30.4,0v52.419a15.2,15.2,0,0,0,30.4,0M503.6,285.828V233.409a15.2,15.2,0,0,0-30.4,0v52.419a15.2,15.2,0,0,0,30.4,0m79.675-41.935v-62.9a15.2,15.2,0,0,0-30.4,0v62.9a15.2,15.2,0,0,0,30.4,0"
+            transform="translate(-407.364 105.668)" fill="#fff" />
+          <g id="Group_1094" data-name="Group 1094" transform="translate(98.961 354.292)">
+            <path id="Path_237" data-name="Path 237"
+              d="M510.9,217.619h-3.046v-9.859a2.1,2.1,0,0,0-2.05-1.936,2.038,2.038,0,0,0-1.934,1.936v9.859h-2.931c-1.936,0-1.936,1.259-1.936,1.936s0,1.934,1.936,1.934h2.931V241.37a5.335,5.335,0,0,0,5.484,5.427,2.1,2.1,0,0,0,1.993-1.936,2.127,2.127,0,0,0-1.993-1.991,1.656,1.656,0,0,1-1.5-1.5V221.489H510.9a1.935,1.935,0,1,0,0-3.87"
+              transform="translate(-499 -205.596)" fill="#fff" />
+            <path id="Path_238" data-name="Path 238"
+              d="M525.857,213.062c-5.555,0-9.163,3.565-11.064,6.2V215a1.935,1.935,0,1,0-3.87,0v25.251a1.935,1.935,0,1,0,3.87,0v-12.31c0-.074,0-.1.083-.273a24.645,24.645,0,0,1,3.293-6.369c2.3-2.977,4.741-4.363,7.687-4.363A1.961,1.961,0,0,0,527.791,215a1.915,1.915,0,0,0-1.934-1.936"
+              transform="translate(-491.397 -200.981)" fill="#fff" />
+            <path id="Path_239" data-name="Path 239"
+              d="M536.091,213.028a14.595,14.595,0,0,0,0,29.178,13.915,13.915,0,0,0,11.822-6.634,2.033,2.033,0,0,0-.655-2.71,1.911,1.911,0,0,0-1.464-.206,1.836,1.836,0,0,0-1.138.858,10.028,10.028,0,0,1-8.565,4.823,10.483,10.483,0,0,1-10.274-9.642H548.23a1.861,1.861,0,0,0,1.936-1.821l0-.272c-.6-7.738-6.654-13.573-14.072-13.573m0,3.87a10.208,10.208,0,0,1,9.847,7.983H526.084a10.331,10.331,0,0,1,10.008-7.983"
+              transform="translate(-484.396 -201.003)" fill="#fff" />
+            <path id="Path_240" data-name="Path 240"
+              d="M554.977,213.062a11.878,11.878,0,0,0-8.142,3.218V215a1.906,1.906,0,1,0-3.812,0v25.827l.074.074a.716.716,0,0,0,.134.295,2.063,2.063,0,0,0,1.23.969l.5.021a1.71,1.71,0,0,0,1.428-.68,1.769,1.769,0,0,0,.434-.891l.016-15.582a8.272,8.272,0,0,1,8.142-8.1,8.1,8.1,0,0,1,8.085,8.085v15.23a1.935,1.935,0,1,0,3.87,0v-15.23a11.969,11.969,0,0,0-11.955-11.956"
+              transform="translate(-470.93 -200.981)" fill="#fff" />
+            <path id="Path_241" data-name="Path 241"
+              d="M587.531,205.685a1.967,1.967,0,0,0-1.993,1.936v14.59a13.791,13.791,0,0,0-10.2-4.5,14.6,14.6,0,0,0,0,29.178,13.806,13.806,0,0,0,10.2-4.445v2.509a1.965,1.965,0,0,0,3.929,0v-37.33a1.961,1.961,0,0,0-1.936-1.936m-12.2,37.274a10.671,10.671,0,1,1,10.2-11.062v.906a10.357,10.357,0,0,1-10.2,10.157"
+              transform="translate(-459.336 -205.685)" fill="#fff" />
+            <path id="Path_242" data-name="Path 242"
+              d="M606.286,214.082a1.937,1.937,0,0,0-.45-.6l-.16-.113a3.955,3.955,0,0,0-.789-.323l-.478-.016a.707.707,0,0,0-.272.057l-.195.029a1.765,1.765,0,0,0-.64.372h-.372v.46a1.662,1.662,0,0,0-.287.96v15.224a8.084,8.084,0,1,1-16.168.007v-15.23a1.936,1.936,0,0,0-3.871,0v15.23a11.914,11.914,0,0,0,20.04,8.812v.459a10.028,10.028,0,0,1-10.03,9.865,9.852,9.852,0,0,1-4.33-1.03l-.115-.043a2.023,2.023,0,0,0-2.4.965,1.989,1.989,0,0,0,.835,2.612,14.593,14.593,0,0,0,6.013,1.367,13.834,13.834,0,0,0,13.9-13.732V214.905a1.68,1.68,0,0,0-.228-.824"
+              transform="translate(-445.692 -201.003)" fill="#fff" />
+          </g>
+        </g>
+      </svg>
     </div>
+    <h1 class="header__title language-link">DAILY MUSIC BY EXPERTS</h1>
+    <div class="text--center pad-button-logo">
+      <button mat-flat-button (click)="openDialog()" class="button__purple">Login</button>
+    </div>
+
+     
+    
     <ng-template #loading>
       <app-hero-loading></app-hero-loading>
     </ng-template>
