--- a/src/app/shared/styles/_colors.scss
+++ b/src/app/shared/styles/_colors.scss
@@ -1,7 +1,7 @@
 // Descriptive Colors
 $white: #ffffff;
-$blue: #3f51b5;
-$red: #dc143c;
+$blue: #ab56e4;
+$red: #ee15be;
 $grey: #bbbbbb;
 $light-grey: #eeeeee;
 
