--- a/src/app/shared/styles/global.scss
+++ b/src/app/shared/styles/global.scss
@@ -4,6 +4,15 @@
   @include font-roboto();
 }
 
+
+.mat-flat-button{
+  height:48px !important;
+  min-width:100px !important;
+  font-size:14px !important;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
 a, .cp {
   cursor: pointer;
 }
@@ -14,7 +23,7 @@ h1, h2 {
 
 .header__title {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 300;
   padding: 1rem 0 0;
 }
@@ -44,9 +53,13 @@ h1, h2 {
   cursor: pointer;
 }
 
+.text--upper {
+  text-transform: uppercase;
+}
 .text--center {
   text-align: center;
 }
+
 
 .text--right {
   text-align: right;
@@ -69,6 +82,16 @@ pre {
   text-align: left;
   word-wrap: break-word;
 }
+.mat-dialog-container{
+  background-color: #FFF!important;
+  color: #383838!important;
+  min-width: 80vw;
+  font-size: 11px;
+}
+.full-center{
+  align-self: center;
+  min-height: 50vw;
+}
 
 .offline-error {
   font-size: 1rem;
@@ -82,7 +105,11 @@ pre {
     display: inline-flex;
   }
 }
-
+.button__purple{
+  width: 80%;
+  background-color: #DD18B0;
+  color: #FFFFFF;
+}
 .language-link {
   color: white;
   text-decoration: none;
