--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,3 +1,25 @@
 mat-card-title, mat-card-subtitle, .mat-card-image {
   cursor: pointer;
 }
+.modal-logo{
+  text-align: center;
+}
+
+.modal-bg{
+  min-height: 80vh;
+}
+
+.bg{
+  width: 100vw;
+  height: 100vh;
+  background: url('/assets/images/bg.jpeg') no-repeat center;
+  background-size: cover;
+}
+
+.logo{
+  text-align: center;
+}
+
+.pad-button-logo{
+  padding-top: 20vh;
+}
