Fixing some alignments

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" class="bg">
   <div fxFlex="10" fxFlex.gt-sm="20"></div>
-  <div fxFlex="90" fxFlex.gt-sm="80" class="full-center">
+  <div fxFlex="90" fxFlex.gt-sm="80" class="full-center full-height">
     <div class="logo">
       <svg xmlns="http://www.w3.org/2000/svg" width="193.949" height="198.142" viewBox="0 0 193.949 198.142">
         <g id="Group_1095" data-name="Group 1095" transform="translate(-65.834 -208.555)">
