--- a/src/app/modules/onboarding/pages/index-onboarding/index-onboarding.component.scss
+++ b/src/app/modules/onboarding/pages/index-onboarding/index-onboarding.component.scss
@@ -6,6 +6,16 @@
     background-size: cover;
     background-position: center -30vh;
   }
+
+
+  .wrap-description{
+    margin: 20px 15vw 20px 15vw!important;
+  }
+
+  .onboard-slide{
+    // max-width: 100vw;
+    //border:1px solid #ff0000
+  }
   
   .half{
     text-align: center;
@@ -28,5 +38,5 @@
 }
     
   .pad-button-logo{
-    padding-top: 20vh;
+    padding-top: 10vh;
   }
