--- a/src/app/shared/styles/_colors.scss
+++ b/src/app/shared/styles/_colors.scss
@@ -1,10 +1,12 @@
 // Descriptive Colors
 $white: #ffffff;
-$blue: #ab56e4;
+$purple: #ab56e4;
 $red: #ee15be;
 $grey: #bbbbbb;
-$light-grey: #eeeeee;
+$light-grey: #DEDEDE;
+$dark-grey: #707070;
+$black: #1B140C;
 
 // Functional Colors
-$primary--color: $blue;
+$primary--color: $purple;
 $secondary--color: $white;
